# build-deps

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  attributes  msys2.cmd.in  package-lock.cmake  renovate.json  sonar-project.properties
.github/workflows/: build-cbs.yml  build-ffmpeg.yml  ci.yml
cmake/: apply_git_patch.cmake  ffmpeg_cbs.cmake  git_fetch_tags.cmake  libcbs.pc.in  unix_path.cmake
cmake/boost/: _main.cmake
cmake/cpm/: CPM.cmake
cmake/ffmpeg/: _main.cmake  amf.cmake  cbs.cmake  ffmpeg.cmake  libva.cmake  mf.cmake  nv_codec_headers.cmake  svt_av1.cmake  vaapi.cmake  vulkan.cmake  x264.cmake  x265.cmake
cmake/toolchain/aarch64-linux/: crosscompile.cmake
cmake/toolchain/aarch64-macos/: crosscompile.cmake
cmake/toolchain/powerpc64le-linux/: crosscompile.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  arm64-apple-macosx.cmake  powerpc64le-linux-gnu.cmake  x86_64-apple-macosx.cmake
crosstool-ng/aarch64/: .config
ffmpeg/Darwin-arm64/include/cbs/: config.h
ffmpeg/Darwin-arm64/include/cbs/arm/: mathops.h
ffmpeg/Darwin-arm64/include/libavutil/: hwcontext.h
ffmpeg/Darwin-x86_64/include/cbs/: config.h
ffmpeg/Darwin-x86_64/include/libavutil/: ffversion.h  intmath.h
ffmpeg/Linux-aarch64/include/cbs/: config.h
ffmpeg/Linux-ppc64le/include/cbs/: config.h  get_bits.h  mathops.h
ffmpeg/Linux-ppc64le/include/cbs/ppc/: mathops.h
ffmpeg/Linux-ppc64le/include/libavutil/: hwcontext.h
ffmpeg/Linux-x86_64/include/cbs/: config.h
ffmpeg/Linux-x86_64/include/libavutil/x86/: asm.h  intmath.h
ffmpeg/Windows-AMD64/include/cbs/: config.h  get_bits.h  mathops.h
ffmpeg/Windows-AMD64/include/libavutil/: ffversion.h  hwcontext.h  intmath.h
ffmpeg/Windows-AMD64/include/libavutil/x86/: asm.h  intmath.h
ffmpeg/linux-aarch64/include/: x265_config.h
ffmpeg/linux-aarch64/lib/pkgconfig/: libavcodec.pc  libavutil.pc  libcbs.pc  libswscale.pc  x265.pc
ffmpeg/linux-powerpc64le/lib/pkgconfig/: ffnvcodec.pc  libavcodec.pc  libavutil.pc  x264.pc
ffmpeg/linux-x86_64/include/cbs/x86/: mathops.h
ffmpeg/linux-x86_64/lib/pkgconfig/: SvtAv1Enc.pc  libavcodec.pc  libavutil.pc  x265.pc
ffmpeg/macos-aarch64/include/libavutil/: ffversion.h
ffmpeg/macos-aarch64/include/libavutil/arm/: intmath.h
ffmpeg/macos-aarch64/lib/pkgconfig/: libavcodec.pc  libavutil.pc  libswscale.pc
ffmpeg/macos-x86_64/include/cbs/: get_bits.h
ffmpeg/macos-x86_64/lib/pkgconfig/: SvtAv1Enc.pc  libcbs.pc
ffmpeg/windows-x86_64/include/: x265_config.h
ffmpeg/windows-x86_64/include/cbs/: config.h
ffmpeg/windows-x86_64/include/cbs/x86/: mathops.h
ffmpeg/windows-x86_64/lib/pkgconfig/: SvtAv1Enc.pc  ffnvcodec.pc  libavcodec.pc  libavutil.pc  libcbs.pc  libswscale.pc  x264.pc  x265.pc
ffmpeg_patches/cbs/: 02-include-cbs-config.patch  03-remove-register.patch  avconfig.patch  config.patch  explicit_intmath.patch  remove_register.patch  size_specifier.patch
ffmpeg_patches/ffmpeg/: 01-amf-colorspace-v2.patch  01-amf-colorspace-v3.patch  01-amf-colorspace.patch  01-idr-on-amf.patch  02-amf-color-fixes.patch  02-idr-on-amf.patch  03-amfenc-disable-buffering.patch  05-qsv-session-leak.patch  05-vaapi-customized-surface-alignment.patch  06-amfenc-new-av1-usages.patch  06-prevent-avcodec-dup-symbols.patch  06-vaapi-customized-surface-alignment.patch  07-amfenc-query-timeout.patch  07-avcodec-options-revert.patch  08-vulkan-sync-fix.patch
patches/FFmpeg/AMF/: 04-amfenc-query-timeout.patch
patches/FFmpeg/FFmpeg/AMF/: 01-amf-outputdelay.patch  01-amfenc-av1-full-range.patch  02-idr-on-amf.patch
patches/FFmpeg/FFmpeg/MF/: 01-mfenc-lowlatency.patch
patches/FFmpeg/FFmpeg/VAAPI/: 02-vaapi-leak.patch
patches/FFmpeg/FFmpeg/cbs/: 01-explicit-intmath.patch  02-remove-register.patch
patches/FFmpeg/FFmpeg/nv-codec-headers/: 01-nvenc-av1-filler.patch
patches/FFmpeg/FFmpeg/vulkan/: 01-fix-encode-init-error-code.patch  02-fix-cbs-leak-in-vulkan-encoders.patch  02-fix-encode-feedback-flags-check-order.patch  02-fix-vulkan-encode-leak.patch
patches/FFmpeg/MF/: 01-mfenc-lowlatency.patch
patches/FFmpeg/VAAPI/: 01-vaapi-customized-surface-alignment.patch
patches/FFmpeg/cbs/: 01-explicit-intmath.patch  02-remove-register.patch  03-size-specifier.patch
patches/FFmpeg/x265_git/: 01-cmake-minimum_required.patch  02-uint8_t-undefined.patch
patches/boost/: 01-fix-arm64-asm-compile.patch  02-no-link-libatomic-clang-windows.patch
